Fix white space on bottom when scroling within SlideOutMenu

--- a/src/components/SlideOutMenu/SlideOutMenu.scss
+++ b/src/components/SlideOutMenu/SlideOutMenu.scss
@@ -14,9 +14,9 @@
   height: 100%;
   transition: right 0.3s ease-in-out;
   z-index: 1001;
-  overflow: hidden;
 
   &.open {
+    overflow: hidden;
     right: 0;
   }
 
@@ -27,7 +27,6 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    overflow: hidden;
     background: var(--bg-gradient);
     transition: background-color 0.3s ease, background-image 0.3s ease;
 
