--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -26,12 +26,6 @@ body {
   margin: 0;
 }
 
-html {
-  overflow-y: scroll;
-  width: 100%;
-  height: 100%;
-}
-
 // TransitionGroup
 
 .fade-enter {
